--- a/apps/www/src/components/page-header/PageActions.astro
+++ b/apps/www/src/components/page-header/PageActions.astro
@@ -2,6 +2,6 @@
 import { cn } from '@/lib/utils'
 ---
 
-<div class={cn('flex w-full items-center justify-start gap-2 py-2', Astro.props.class)}>
+<div class={cn('flex w-full items-center justify-start gap-2 pt-2', Astro.props.class)}>
   <slot />
 </div>
