--- a/apps/www/src/layouts/ExampleLayout.astro
+++ b/apps/www/src/layouts/ExampleLayout.astro
@@ -9,45 +9,47 @@ import RootLayout from './RootLayout.astro'
 ---
 
 <RootLayout>
-  <div class="relative">
-    <PageHeader>
-      <Announcement />
-      <PageHeaderHeading class="hidden md:block"> Check out some examples </PageHeaderHeading>
-      <PageHeaderHeading class="md:hidden"> Examples </PageHeaderHeading>
-      <PageHeaderDescription>
-        Dashboard, cards, authentication. Some examples built using the components. Use this as a guide to build your
-        own.
-      </PageHeaderDescription>
+  <PageHeader>
+    <Announcement />
+    <PageHeaderHeading class="hidden md:block"> Check out some examples </PageHeaderHeading>
+    <PageHeaderHeading class="md:hidden"> Examples </PageHeaderHeading>
+    <PageHeaderDescription> Dashboard, cards, authentication. Some examples built using the components. Use this as a guide to build your own. </PageHeaderDescription>
 
-      <PageActions>
-        <a
-          href="/docs"
-          class={buttonVariants({
-            size: 'sm',
-          })}
-        >
-          Get Started
-        </a>
-        <a
-          target="_blank"
-          rel="noreferrer"
-          href={siteConfig.links.github}
-          class={buttonVariants({
-            size: 'sm',
-            variant: 'ghost',
-          })}
-        >
-          GitHub
-        </a>
-      </PageActions>
-    </PageHeader>
+    <PageActions>
+      <a
+        href="/docs"
+        class={buttonVariants({
+          size: 'sm',
+        })}
+      >
+        Get Started
+      </a>
+      <a
+        target="_blank"
+        rel="noreferrer"
+        href={siteConfig.links.github}
+        class={buttonVariants({
+          size: 'sm',
+          variant: 'ghost',
+        })}
+      >
+        GitHub
+      </a>
+    </PageActions>
+  </PageHeader>
 
-    <div class="container py-6">
-      <section>
+  <div class="border-grid border-b">
+    <div class="container-wrapper">
+      <div class="container py-4">
         <ExamplesNav />
-        <div class="overflow-hidden rounded-[0.5rem] border bg-background shadow">
-          <slot />
-        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-wrapper">
+    <div class="container py-6">
+      <section class="overflow-hidden rounded-[0.5rem] border bg-background shadow">
+        <slot />
       </section>
     </div>
   </div>
