--- a/apps/www/src/components/DocsNav.astro
+++ b/apps/www/src/components/DocsNav.astro
@@ -5,13 +5,13 @@ import { cn } from '@/lib/utils'
 const { pathname } = Astro.props
 ---
 
-<div class="w-full">
+<div class="flex flex-col gap-6">
   {
     docsConfig.sidebarNav.map((item) => (
-      <div class="pb-4">
-        <h4 class="mb-1 rounded-md px-2 py-1 text-sm font-semibold">
+      <div class="flex flex-col gap-1">
+        <h4 class="rounded-md px-2 py-1 text-sm font-medium">
           {item.title}
-          {item.label && <span class={cn('ml-2 rounded-md bg-[#adfa1d] px-1.5 py-0.5 text-xs leading-none text-[#000000] no-underline group-hover:no-underline')}>{item.label}</span>}
+          {item.label && <span class="ml-2 rounded-md bg-[#adfa1d] px-1.5 py-0.5 text-xs font-normal leading-none text-[#000000] no-underline group-hover:no-underline">{item.label}</span>}
         </h4>
         <div class="grid grid-flow-row auto-rows-max gap-0.5 text-sm">
           {item.items.map((subItem) =>
@@ -19,10 +19,12 @@ const { pathname } = Astro.props
               <a
                 href={subItem.href}
                 class={cn(
-                  'group flex w-full items-center px-2 py-1 font-normal text-foreground underline-offset-2 hover:underline',
+                  'roup relative flex h-8 w-full items-center rounded-lg px-2 after:absolute after:inset-x-0 after:inset-y-[-2px]  after:rounded-lg hover:bg-accent hover:text-accent-foreground',
                   subItem.disabled && 'cursor-not-allowed opacity-60',
-                  pathname === subItem.href ? 'underline' : ''
+                  pathname === subItem.href ? 'bg-accent font-medium text-accent-foreground' : 'font-normal text-foreground',
                 )}
+                target={subItem.external ? '_blank' : ''}
+                rel={subItem.external ? 'noreferrer' : ''}
               >
                 {subItem.title}
                 {subItem.label && <span class={cn('ml-2 rounded-md bg-[#adfa1d] px-1.5 py-0.5 text-xs leading-none text-[#000000] no-underline group-hover:no-underline')}>{subItem.label}</span>}
@@ -32,7 +34,7 @@ const { pathname } = Astro.props
                 {subItem.title}
                 {subItem.label && <span class={cn('ml-2 rounded-md bg-muted px-1.5 py-0.5 text-xs leading-none text-muted-foreground no-underline group-hover:no-underline')}>{subItem.label}</span>}
               </span>
-            )
+            ),
           )}
         </div>
       </div>
