--- a/apps/www/src/components/ExamplesNav.astro
+++ b/apps/www/src/components/ExamplesNav.astro
@@ -1,36 +1,24 @@
 ---
 import { cn } from '@/lib/utils'
-
-const examples = [
-  {
-    name: 'Examples',
-    href: '/examples/authentication',
-  },
-]
+import ExampleLink from './ExampleLink.astro'
 
 const { pathname } = Astro.url
+
+export const examples = [
+  {
+    name: 'Authentication',
+    href: '/examples/authentication',
+    code: 'authentication',
+    hidden: false,
+  },
+]
 ---
 
 <div class="relative">
-  <div class="relative overflow-hidden max-w-[600px] lg:max-w-none">
-    <div class="h-full w-full rounded-[inherit]">
-      <div style="min-width: 100%; display: table;">
-        <div class={cn('mb-4 flex items-center', Astro.props.class)}>
-          {
-            examples.map((example) => (
-              <a
-                href={example.href}
-                class={cn(
-                  'flex h-7 items-center justify-center rounded-full px-4 text-center text-sm transition-colors hover:text-primary',
-                  pathname?.startsWith(example.href) ? 'bg-muted font-medium text-primary' : 'text-muted-foreground',
-                )}
-              >
-                {example.name}
-              </a>
-            ))
-          }
-        </div>
-      </div>
+  <div class="max-w-[600px] lg:max-w-none">
+    <div class={cn('flex items-center', Astro.props.class)}>
+      <ExampleLink example={{ name: 'Examples', href: '/', code: '', hidden: false }} isActive={pathname === '/'} />
+      {examples.map((example) => <ExampleLink {example} isActive={pathname?.startsWith(example.href) ?? false} />)}
     </div>
   </div>
 </div>
