--- a/apps/www/src/components/page-header/PageHeaderDescription.astro
+++ b/apps/www/src/components/page-header/PageHeaderDescription.astro
@@ -2,6 +2,6 @@
 import { cn } from '@/lib/utils'
 ---
 
-<p class={cn('max-w-2xl text-balance text-lg font-light text-foreground', Astro.props.class)}>
+<p class={cn('max-w-2xl text-balance text-base font-light text-foreground sm:text-lg', Astro.props.class)}>
   <slot />
 </p>
