--- a/apps/www/src/layouts/RootLayout.astro
+++ b/apps/www/src/layouts/RootLayout.astro
@@ -84,19 +84,15 @@ const { title, description, url } = Astro.props
 
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class="min-h-svh bg-background font-sans antialiased">
     <div>
-      <div class="relative flex min-h-screen flex-col bg-background">
-        <div class="border-border/40 dark:border-border">
-          <div
-            class="mx-auto w-full border-border/40 dark:border-border min-[1800px]:max-w-[1536px] min-[1800px]:border-x"
-          >
-            <SiteHeader />
-            <main class="flex-1">
-              <slot />
-            </main>
-            <SiteFooter />
-          </div>
+      <div class="relative flex min-h-svh flex-col bg-background">
+        <div class="border-grid flex flex-1 flex-col">
+          <SiteHeader />
+          <main class="flex flex-1 flex-col">
+            <slot />
+          </main>
+          <SiteFooter />
         </div>
       </div>
     </div>
