--- a/apps/www/src/pages/colors/index.astro
+++ b/apps/www/src/pages/colors/index.astro
@@ -6,38 +6,40 @@ import { buttonVariants } from '@/registry/new-york/ui/button'
 
 import Colors from './_colors.astro'
 import { siteConfig } from '@/config/site'
+
+const title = 'Color Library'
+const description = 'Tailwind CSS colors in HSL, RGB, HEX and OKLCH formats.'
 ---
 
-<RootLayout title={'Tailwind Colors - ' + siteConfig.title} description="All colors in all formats.">
-  <div class="relative">
-    <PageHeader>
-      <Announcement />
-      <PageHeaderHeading>Tailwind Colors</PageHeaderHeading>
-      <PageHeaderDescription> Tailwind CSS colors in HSL, RGB, and HEX formats. </PageHeaderDescription>
+<RootLayout title={title + ' - ' + siteConfig.title} {description}>
+  <PageHeader>
+    <Announcement />
+    <PageHeaderHeading>{title}</PageHeaderHeading>
+    <PageHeaderDescription> {description} </PageHeaderDescription>
 
-      <PageActions>
-        <a
-          href="#colors"
-          class={buttonVariants({
-            size: 'sm',
-          })}
-        >
-          Browse Colors
-        </a>
-        <a
-          target="_blank"
-          rel="noreferrer"
-          href="/docs/theming"
-          class={buttonVariants({
-            size: 'sm',
-            variant: 'ghost',
-          })}
-        >
-          Documentation
-        </a>
-      </PageActions>
-    </PageHeader>
-
+    <PageActions>
+      <a
+        href="#colors"
+        class={buttonVariants({
+          size: 'sm',
+        })}
+      >
+        Browse Colors
+      </a>
+      <a
+        target="_blank"
+        rel="noreferrer"
+        href="/docs/theming"
+        class={buttonVariants({
+          size: 'sm',
+          variant: 'ghost',
+        })}
+      >
+        Documentation
+      </a>
+    </PageActions>
+  </PageHeader>
+  <div class="container-wrapper">
     <div class="container py-6">
       <section id="colors" class="scroll-mt-20">
         <Colors />
