--- a/apps/www/src/components/Pager.astro
+++ b/apps/www/src/components/Pager.astro
@@ -1,13 +1,14 @@
 ---
-import { docsConfig, type TNavItem, type TNavItemWithChildren } from '@/config/docs'
+import { docsConfig } from '@/config/docs'
+import type { NavItem, NavItemWithChildren } from '../../types/nav'
 import { cn } from '@/lib/utils'
 import { buttonVariants } from '@/registry/new-york/ui/button'
 
 const { pathname } = Astro.url
 
-function flatten(links: TNavItemWithChildren[]): TNavItem[] {
+function flatten(links: NavItemWithChildren[]): NavItem[] {
   return links
-    .reduce<TNavItem[]>((flat, link) => {
+    .reduce<NavItem[]>((flat, link) => {
       return flat.concat(link.items?.length ? flatten(link.items) : link)
     }, [])
     .filter((link) => !link?.disabled)
