--- a/apps/www/src/components/SiteFooter.astro
+++ b/apps/www/src/components/SiteFooter.astro
@@ -7,9 +7,30 @@ import { siteConfig } from '@/config/site'
     <div class="container py-4">
       <p class="text-balance text-center text-sm leading-loose text-muted-foreground md:text-left">
         Built & designed by{' '}
-        <a href={siteConfig.links.shadcn.twitter} target="_blank" rel="noreferrer" class="font-medium underline underline-offset-4"> shadcn </a>. Ported to Angular by{' '}
-        <a href={siteConfig.links.twitter} target="_blank" rel="noreferrer" class="font-medium underline underline-offset-4"> Adrián UB </a>. The source code is available on{' '}
-        <a href={siteConfig.links.github} target="_blank" rel="noreferrer" class="font-medium underline underline-offset-4"> GitHub. </a>
+        <a
+          href={siteConfig.links.shadcn.twitter}
+          target="_blank"
+          rel="noreferrer"
+          class="font-medium underline underline-offset-4"
+        >
+          shadcn
+        </a>. Ported to Angular by{' '}
+        <a
+          href={siteConfig.links.twitter}
+          target="_blank"
+          rel="noreferrer"
+          class="font-medium underline underline-offset-4"
+        >
+          Adrián UB
+        </a>. The source code is available on{' '}
+        <a
+          href={siteConfig.links.github}
+          target="_blank"
+          rel="noreferrer"
+          class="font-medium underline underline-offset-4"
+        >
+          GitHub.
+        </a>
       </p>
     </div>
   </div>
