--- a/apps/www/src/components/mdx/pre.astro
+++ b/apps/www/src/components/mdx/pre.astro
@@ -14,19 +14,47 @@ type Props = {
   className?: string
 }
 
-const { __rawString__, __npmCommand__, __pnpmCommand__, __yarnCommand__, __bunCommand__, __withMeta__, className, ...rest } = Astro.props
+const {
+  __rawString__,
+  __npmCommand__,
+  __pnpmCommand__,
+  __yarnCommand__,
+  __bunCommand__,
+  __withMeta__,
+  className,
+  ...rest
+} = Astro.props
 
 const isNpmCommand = __npmCommand__ && __yarnCommand__ && __pnpmCommand__ && __bunCommand__
 ---
 
-{isNpmCommand && <CodeBlockCommand __npmCommand__={__npmCommand__} __yarnCommand__={__yarnCommand__} __pnpmCommand__={__pnpmCommand__} __bunCommand__={__bunCommand__} />}
+{
+  isNpmCommand && (
+    <CodeBlockCommand
+      __npmCommand__={__npmCommand__}
+      __yarnCommand__={__yarnCommand__}
+      __pnpmCommand__={__pnpmCommand__}
+      __bunCommand__={__bunCommand__}
+    />
+  )
+}
 
 {
   !isNpmCommand && (
     <>
-      <pre class={cn('mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900', className)} {...rest}><slot /></pre>
+      <pre
+        class={cn(
+          'mb-4 mt-6 max-h-[650px] overflow-x-auto rounded-lg border !bg-zinc-950 py-4 dark:!bg-zinc-900',
+          className,
+        )}
+        {...rest}
+      >
+        <slot />
+      </pre>
 
-      {__rawString__ && !__npmCommand__ ? <CopyButton value={__rawString__} class={cn('absolute right-4 top-4', __withMeta__ && 'top-16')} /> : null}
+      {__rawString__ && !__npmCommand__ ? (
+        <CopyButton value={__rawString__} class={cn('absolute right-4 top-4', __withMeta__ && 'top-16')} />
+      ) : null}
     </>
   )
 }
