--- a/apps/www/src/layouts/ExampleLayout.astro
+++ b/apps/www/src/layouts/ExampleLayout.astro
@@ -13,7 +13,9 @@ import RootLayout from './RootLayout.astro'
     <Announcement />
     <PageHeaderHeading class="hidden md:block"> Check out some examples </PageHeaderHeading>
     <PageHeaderHeading class="md:hidden"> Examples </PageHeaderHeading>
-    <PageHeaderDescription> Dashboard, cards, authentication. Some examples built using the components. Use this as a guide to build your own. </PageHeaderDescription>
+    <PageHeaderDescription>
+      Dashboard, cards, authentication. Some examples built using the components. Use this as a guide to build your own.
+    </PageHeaderDescription>
 
     <PageActions>
       <a
