--- a/apps/www/src/layouts/main.css
+++ b/apps/www/src/layouts/main.css
@@ -107,7 +107,7 @@
   }
 
   .chunk-container::after {
-    content: "";
+    content: '';
     @apply absolute -inset-4 shadow-xl rounded-xl border;
   }
 
