--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -12,11 +12,16 @@ import { buttonVariants } from '@/registry/new-york/ui/button'
 import { ExampleAuthenticationComponent } from './examples/authentication/_authentication'
 ---
 
-<RootLayout title={'Build your component library - ' + siteConfig.title} description="Beautifully designed components that you can copy and paste into your apps. Made with Tailwind CSS. Open source.">
+<RootLayout
+  title={'Build your component library - ' + siteConfig.title}
+  description="Beautifully designed components that you can copy and paste into your apps. Made with Tailwind CSS. Open source."
+>
   <PageHeader>
     <Announcement />
     <PageHeaderHeading>Build your component library</PageHeaderHeading>
-    <PageHeaderDescription> Beautifully designed components that you can copy and paste into your apps. Made with Tailwind CSS. Open source. </PageHeaderDescription>
+    <PageHeaderDescription>
+      Beautifully designed components that you can copy and paste into your apps. Made with Tailwind CSS. Open source.
+    </PageHeaderDescription>
 
     <PageActions>
       <a
