--- a/apps/www/src/components/page-header/PageHeader.astro
+++ b/apps/www/src/components/page-header/PageHeader.astro
@@ -2,12 +2,7 @@
 import { cn } from '@/lib/utils'
 ---
 
-<section
-  class={cn(
-    'border-grid border-b',
-    Astro.props.class,
-  )}
->
+<section class={cn('border-grid border-b', Astro.props.class)}>
   <div class="container-wrapper">
     <div class="container flex flex-col items-start gap-1 py-8 md:py-10 lg:py-12">
       <slot />
