--- a/apps/www/src/components/page-header/PageHeaderHeading.astro
+++ b/apps/www/src/components/page-header/PageHeaderHeading.astro
@@ -2,6 +2,11 @@
 import { cn } from '@/lib/utils'
 ---
 
-<h1 class={cn('text-2xl font-bold leading-tight tracking-tighter sm:text-3xl md:text-4xl lg:leading-[1.1]', Astro.props.class)}>
+<h1
+  class={cn(
+    'text-2xl font-bold leading-tight tracking-tighter sm:text-3xl md:text-4xl lg:leading-[1.1]',
+    Astro.props.class,
+  )}
+>
   <slot />
 </h1>
