--- a/apps/www/src/layouts/DocsLayout.astro
+++ b/apps/www/src/layouts/DocsLayout.astro
@@ -22,10 +22,18 @@ const { pathname } = Astro.url
 const toc = await getTableOfContents(entry.body ?? '')
 ---
 
-<RootLayout title={entry.data.title + ' - ' + siteConfig.title} description={entry.data.description} url={siteConfig.url + Astro.url.pathname}>
+<RootLayout
+  title={entry.data.title + ' - ' + siteConfig.title}
+  description={entry.data.description}
+  url={siteConfig.url + Astro.url.pathname}
+>
   <div class="container-wrapper">
-    <div class="container flex-1 items-start md:grid md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10">
-      <aside class="border-grid fixed top-14 z-30 hidden h-[calc(100vh-3.5rem)] w-full shrink-0 border-r md:sticky md:block">
+    <div
+      class="container flex-1 items-start md:grid md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10"
+    >
+      <aside
+        class="border-grid fixed top-14 z-30 hidden h-[calc(100vh-3.5rem)] w-full shrink-0 border-r md:sticky md:block"
+      >
         <div class="no-scrollbar h-full overflow-auto py-6 pr-4 lg:py-8">
           <DocsNav pathname={pathname} />
         </div>
@@ -34,7 +42,14 @@ const toc = await getTableOfContents(entry.body ?? '')
         <div class="mx-auto w-full min-w-0 max-w-2xl">
           <div class="mb-4 flex items-center space-x-1 text-sm leading-none text-muted-foreground">
             <a href="/docs" class="truncate">Docs</a>
-            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-3.5 w-3.5">
+            <svg
+              width="15"
+              height="15"
+              viewBox="0 0 15 15"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-3.5 w-3.5"
+            >
               <path
                 d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
                 fill="currentColor"
