--- a/docs/src/components/starlight/LinkButton.astro
+++ b/docs/src/components/starlight/LinkButton.astro
@@ -1,5 +1,8 @@
 ---
 import type { HTMLAttributes } from 'astro/types'
+import type { VariantProps } from 'class-variance-authority'
+
+import { buttonVariants } from '~/registry/new-york-v4/ui/button'
 
 interface Props extends Omit<HTMLAttributes<'a'>, 'href'> {
   href: string | URL
@@ -7,6 +10,14 @@ interface Props extends Omit<HTMLAttributes<'a'>, 'href'> {
 }
 
 const { class: className, variant = 'primary', ...attrs } = Astro.props
+
+const variantButton: Record<NonNullable<Props['variant']>, VariantProps<typeof buttonVariants>['variant']> = {
+  primary: 'default',
+  secondary: 'secondary',
+  minimal: 'ghost'
+}
 ---
 
-<slot />
+<a class={buttonVariants({ variant: variantButton[variant], size: 'sm' })} {...attrs}>
+  <slot />
+</a>
