--- a/docs/src/components/starlight/PageFrame.astro
+++ b/docs/src/components/starlight/PageFrame.astro
@@ -17,9 +17,11 @@ const { hasSidebar } = Astro.locals.starlightRoute
       {
         hasSidebar && (
           <div class="container-wrapper flex flex-1 flex-col px-2">
-            <DocsSidebar />
-            <div class="h-full w-full">
-              <slot />
+            <div class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex w-full 3xl:fixed:container 3xl:fixed:px-3 min-h-min flex-1 items-start px-0 [--sidebar-width:220px] [--top-spacing:0] lg:grid lg:grid-cols-[var(--sidebar-width)_minmax(0,1fr)] lg:[--sidebar-width:240px] lg:[--top-spacing:calc(var(--spacing)*4)]">
+              <DocsSidebar />
+              <div class="h-full w-full">
+                <slot />
+              </div>
             </div>
           </div>
         )
