feat: update registry

--- a/docs/src/pages/sink/index.astro
+++ b/docs/src/pages/sink/index.astro
@@ -9,5 +9,5 @@ import { SinkPage } from './_page'
     description: 'A page with all components for testing purposes.',
   }}
 >
-  <SinkPage client:only />
+  <SinkPage client:load />
 </RootLayout>
