docs: add navigation and run lint

--- a/docs/src/components/GitHubLink.astro
+++ b/docs/src/components/GitHubLink.astro
@@ -5,6 +5,11 @@ import { buttonVariants } from '~/registry/new-york-v4/ui/button'
 import { Icons } from './icons'
 ---
 
-<a href={siteConfig.links.github} target="_blank" rel="noreferrer" class={cn(buttonVariants({ variant: 'ghost', size: 'sm' }), 'h-8 shadow-none')}>
+<a
+  href={siteConfig.links.github}
+  target="_blank"
+  rel="noreferrer"
+  class={cn(buttonVariants({ variant: 'ghost', size: 'sm' }), 'h-8 shadow-none')}
+>
   <Icons.gitHub class="size-4" />
 </a>
