--- a/docs/src/mdx-components/components/tr.astro
+++ b/docs/src/mdx-components/components/tr.astro
@@ -7,6 +7,9 @@ export type Props = HTMLAttributes<'tr'>
 const { class: className, ...props } = Astro.props
 ---
 
-<tr class={cn('px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right', className)} {...props}>
+<tr
+  class={cn('px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right', className)}
+  {...props}
+>
   <slot />
 </tr>
