--- a/docs/src/styles/global.css
+++ b/docs/src/styles/global.css
@@ -1,7 +1,7 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
-@import "./themes.css";
+@import './themes.css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -227,15 +227,15 @@
       @apply !mt-0;
     }
 
-    &:first-child>h3:first-child {
+    &:first-child > h3:first-child {
       @apply !mt-0;
     }
 
-    >h3 {
+    > h3 {
       @apply !mt-16;
     }
 
-    >h3+p {
+    > h3 + p {
       @apply !mt-2;
     }
   }
@@ -251,9 +251,9 @@
     font-size: var(--text-sm);
     outline: none;
     position: relative;
-    @apply md:-mx-4;
+    @apply md:-mx-1;
 
-    &:has([data-rehype-pretty-code-title]) [data-slot="copy-button"] {
+    &:has([data-rehype-pretty-code-title]) [data-slot='copy-button'] {
       top: calc(var(--spacing) * 1.5) !important;
     }
   }
@@ -327,10 +327,8 @@
       left: 0;
       width: 2px;
       height: 100%;
-      content: "";
-      background-color: color-mix(in oklab,
-          var(--muted-foreground) 50%,
-          transparent);
+      content: '';
+      background-color: color-mix(in oklab, var(--muted-foreground) 50%, transparent);
     }
   }
 
