--- a/docs/src/components/SiteConfig.astro
+++ b/docs/src/components/SiteConfig.astro
@@ -5,7 +5,18 @@ import { buttonVariants } from '~/registry/new-york-v4/ui/button'
 
 <button class={cn(buttonVariants({ variant: 'ghost', size: 'icon' }), 'size-8', Astro.props.class)}>
   <span class="sr-only">Toggle layout</span>
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="size-4">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="24"
+    height="24"
+    viewBox="0 0 24 24"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    class="size-4"
+  >
     <path d="M2 3v18"></path>
     <rect width="12" height="18" x="6" y="3" rx="2"></rect>
     <path d="M22 3v18"></path>
@@ -22,7 +33,8 @@ import { buttonVariants } from '~/registry/new-york-v4/ui/button'
       html.classList.remove('layout-fixed')
       html.classList.add('layout-full')
       localStorage.setItem('layout', 'full')
-    } else {
+    }
+ else {
       html.classList.remove('layout-full')
       html.classList.add('layout-fixed')
       localStorage.setItem('layout', 'fixed')
