--- a/docs/src/components/page-header/PageHeaderHeading.astro
+++ b/docs/src/components/page-header/PageHeaderHeading.astro
@@ -7,6 +7,12 @@ type Props = HTMLAttributes<'h1'>
 const { class: className, ...props } = Astro.props
 ---
 
-<h1 class={cn('text-primary leading-tighter max-w-2xl text-4xl font-semibold tracking-tight text-balance lg:leading-[1.1] lg:font-semibold xl:text-5xl xl:tracking-tighter', className)} {...props}>
+<h1
+  class={cn(
+    'text-primary leading-tighter max-w-2xl text-4xl font-semibold tracking-tight text-balance lg:leading-[1.1] lg:font-semibold xl:text-5xl xl:tracking-tighter',
+    className,
+  )}
+  {...props}
+>
   <slot />
 </h1>
