--- a/docs/src/mdx-components/components/Image.astro
+++ b/docs/src/mdx-components/components/Image.astro
@@ -6,4 +6,11 @@ export type Props = HTMLAttributes<'img'>
 const { class: className, src, width, height, alt, ...props } = Astro.props
 ---
 
-<ImageAssets class={cn('mt-6 rounded-md border', className)} src={src || ''} width={Number(width)} height={Number(height)} alt={alt || ''} {...props} />
+<ImageAssets
+  class={cn('mt-6 rounded-md border', className)}
+  src={src || ''}
+  width={Number(width)}
+  height={Number(height)}
+  alt={alt || ''}
+  {...props}
+/>
