--- a/docs/src/mdx-components/components/LinkedCard.astro
+++ b/docs/src/mdx-components/components/LinkedCard.astro
@@ -2,17 +2,17 @@
 import type { HTMLAttributes } from 'astro/types'
 import { cn } from '~/lib/utils'
 
-export type Props = HTMLAttributes<'h2'>
+export type Props = HTMLAttributes<'a'>
 
 const { class: className, ...props } = Astro.props
 ---
 
-<h2
+<a
   class={cn(
-    'font-heading mt-12 scroll-m-28 text-2xl font-medium tracking-tight first:mt-0 lg:mt-20 [&+p]:!mt-4 *:[code]:text-2xl',
+    'bg-surface text-surface-foreground hover:bg-surface/80 flex w-full flex-col items-center rounded-xl p-6 transition-colors sm:p-10',
     className,
   )}
   {...props}
 >
   <slot />
-</h2>
+</a>
