--- a/docs/src/mdx-components/components/code.astro
+++ b/docs/src/mdx-components/components/code.astro
@@ -40,7 +40,11 @@ const isNpmCommand = __npm__ && __yarn__ && __pnpm__ && __bun__ && !isPlain
   )
 }
 
-{isNpmCommand && <CodeBlockCommand __npm__={__npm__} __yarn__={__yarn__} __pnpm__={__pnpm__} __bun__={__bun__} />}
+{
+  !isPlain && isNpmCommand && (
+    <CodeBlockCommand __npm__={__npm__} __yarn__={__yarn__} __pnpm__={__pnpm__} __bun__={__bun__} />
+  )
+}
 
 {
   !isPlain && !isNpmCommand && (
