--- a/docs/src/mdx-components/components/pre.astro
+++ b/docs/src/mdx-components/components/pre.astro
@@ -12,6 +12,4 @@ const { class: className, ...props } = Astro.props
     'no-scrollbar min-w-0 overflow-x-auto px-4 py-3.5 outline-none has-[[data-highlighted-line]]:px-0 has-[[data-line-numbers]]:px-0 has-[[data-slot=tabs]]:p-0',
     className,
   )}
-  {...props}>
-  <slot />
-</pre>
+  {...props}><slot /></pre>
